tests/errors/syn.missing-expr.func-sig-param.or
main :: () -> void {
    (int, x := 0) -> void;
};
